Add slides for inbl

--- a/inbl/zhiyang_ong_inbl.tex
+++ b/inbl/zhiyang_ong_inbl.tex
@@ -236,7 +236,28 @@ Instantaneous Noise-Based Logic}
 }
 
 %	Reference: https://www.elektormagazine.com/articles/moores-law
+\begin{frame}
+	\frametitle{Noise-Based Logic (NBL)}
+%	\framesubtitle{Slide Subtitle 5.}
+	
+	\begin{figure}
+		\centering
+		\includegraphics[height=2in]{./pics/generic_nbl}
+		\caption{Generic framework for Noise-Based Logic (NBL).}
+	\end{figure}
+\end{frame}
 
+
+\begin{frame}
+	\frametitle{Design implementations of continuum NBL}
+%	\framesubtitle{Slide Subtitle 5.}
+	
+	\begin{figure}
+		\centering
+		\includegraphics[height=2in]{./pics/continuum_nbl}
+		\caption{Schematic for the {\tt FOLLOWER} gate in continuum NBL.}
+	\end{figure}
+\end{frame}
 
 
 
@@ -287,10 +308,32 @@ Instantaneous Noise-Based Logic}
 	\forall n \in \{1, 2, 3, \dots\} ({\rm or\ n} \in |\mathbb{Z}| > 0)
 	\end{gather*}
 	where $n$ is the $n^{th}$ time step in a bipolar logic signal, {\tt bipolar\_rtw(n)} $\in \{1, -1\}$, that is generated from a (pseudo-) random noise generator. 
-
-
 }
 
+
+
+\begin{frame}
+	\frametitle{Bipolar RTW Signals}
+%	\framesubtitle{Slide Subtitle 5.}
+	
+	\begin{figure}
+		\centering
+		\includegraphics[height=2.6in]{./pics/inbl}
+		\caption{Sample bipolar RTW signal for iNBL.}
+	\end{figure}
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Time-Shifted Bipolar RTW Signals}
+%	\framesubtitle{Slide Subtitle 5.}
+	
+	\begin{figure}
+		\centering
+		\includegraphics[height=2.6in]{./pics/inbl}
+		\caption{Sample time-shifted bipolar RTW signal for time-shifted iNBL (TSINBL).}
+	\end{figure}
+\end{frame}
 
 
 %	Slide 3
