Add slides for inbl

--- a/inbl/zhiyang_ong_inbl.tex
+++ b/inbl/zhiyang_ong_inbl.tex
@@ -339,9 +339,17 @@ Instantaneous Noise-Based Logic}
 %	Slide 3
 \frame
 {
-	\frametitle{References for Classical Reachability Analysis}
+	\frametitle{Squeezed and non-squeezed logic signals for iNBL}
 
-	(Yuan, 2006) Yuan, J., Pixley, C., and Aziz, A. Constrained-Based Verification. Springer Science+Business Media, Inc., New York, NY, 2006.
+	Squeezed logic signals for iNBL:
+	\begin{itemize}
+	\item Logic-high signal: 
+	\end{itemize}
+	\ \\
+	Non-squeezed logic signals for iNBL:
+	\begin{itemize}
+	\item 
+	\end{itemize}
 }
 
 
