IEEE AMP tutorial.

--- a/ieee-amp/simple-simon/simple-simon.tex
+++ b/ieee-amp/simple-simon/simple-simon.tex
@@ -73,9 +73,9 @@
 %	Set up configuration for hyperlinks.
 %\usepackage[pdftex]{hyperref}	-- Option clash
 \hypersetup{
-    pdftitle={Programming Style for C},     % title
-    pdfauthor={Francesco Stefanni},                 % author
-    pdfsubject={A programming style for C}, % subject of the document
+    pdftitle={Making an {\it Arduino} Memory Game},     % title
+    pdfauthor={Zhiyang Ong},                 % author
+    pdfsubject={IEEE Aggie Mentorship Program}, % subject of the document
     pdfcreator={Creator},                           % creator of the document
     pdfproducer={dvipdft},                          % producer of the document
 % Modified by Zhiyang Ong on Feb 7, 2011 to improve the way hyperlinks are colored in these presentation slides
@@ -135,10 +135,10 @@
 
 
 %	First slide of the presentation
-\title[Quantum Reachability Analysis]
+\title[IEEE Aggie Mentorship Program]
 {\huge 
-Reachability Analysis of Quantum Markov Decision Processes}
-\subtitle{Not Using It to Verify Quantum Robots is Foolish}
+Making an Arduino Memory Game}
+\subtitle{A Really Simple Cyber-Physical System}
 \author{Zhiyang Ong}
 \institute{
 	Department of Electrical and Computer Engineering \\
@@ -209,13 +209,15 @@ Reachability Analysis of Quantum Markov Decision Processes}
 	\frametitle{Acknowledgments}
 	Dott. Francesco Stefanni, University of Verona \\
 	\ \\
+	IEEE TAMU Officers
+	\begin{itemize}
+	\item Maria Theresia Tyas
+	\item Millie Kriel
+	\item Polina Golikova
+	\end{itemize}
 	\ \\
 	\ \\
-	Dr. Prateek Tandon, who initiated the formation of this reading group on quantum robotics.
-	\ \\
-	\ \\
-	\ \\
-	Reference: Shenggang Ying and Mingsheng Ying, ``Reachability Analysis of Quantum Markov Decision Processes,'' in {\it arXiv}, Cornell University, Ithaca, NY, July 9, 2014. Available online from {\it arXiv} as Version 2 at: \url{http://arxiv.org/abs/1406.6146} and \url{http://arxiv.org/abs/1406.6146v2}; May 30, 2015 was the last accessed date.
+	Reference: Jerepondumie, ``Make an Arduino Memory Game,'' in {\it Hackster.io}, Hackster, Inc., San Francisco, CA, September 15, 2017. Available online from {\it Hackster.io} at: \url{https://www.hackster.io/Jerepondumie/make-an-arduino-memory-game-73f55e}; February 18, 2018 was the last accessed date.
 \end{frame}
 
 
@@ -225,17 +227,26 @@ Reachability Analysis of Quantum Markov Decision Processes}
 {
 	\frametitle{Warnings!!!}
 
-	\begin{itemize}
-	\item Research publications on formal verification or formal methods have lots of definitions.
-	\item Exact/Approximate algorithms and heuristics for formal verification or formal methods are based on these definitions.
-	\item Hence, exact definitions of terms in formal verification or formal methods are required for proving these algorithms and heuristics and theorems.
-	\item This set of presentation slides does not cover the paper in the same order.
-	\item Some rearrangements are made to present the material as a hybrid of a brief research presentation and tutorial.
-%	\item introduce the notion of reachability analysis, from classical/traditional formal verification, before reachability analysis is introduced for formally verifying quantum systems, including quantum robots.
-	\item $\underline{\varrho}_{\kappa}$
-	\item $\overline{\varrho}_{\kappa}$
-	\item $\rho$
-	\end{itemize}
+	``The code is rather buggy; use is at own risk.'' \\
+	-- Donald Chai \\
+	\ \\
+	``Beware of bugs in the above code. \\
+	I have only proved it correct, not tried it.'' \\
+	-- Donald E. Knuth
+}
+
+
+
+
+%	Slide #3
+\frame
+{
+	\frametitle{Ice Breaker}
+
+	Name \\
+	\ \\
+	What are some of your favorite study techniques? \\
+	\ \\
 }
 
 
