Update slides to include learning outcomes.

--- a/ieee-amp/simple-simon/simple-simon.tex
+++ b/ieee-amp/simple-simon/simple-simon.tex
@@ -259,6 +259,33 @@ Making an Arduino Memory Game}
 
 
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%	Expected Outcomes
+\section{Expected Outcomes}
+
+%	Slide 1
+\frame
+{
+	\frametitle{Expected Outcomes}
+
+	\begin{itemize}
+	\item Learn to understand someone else's wiring diagram
+	\item Understanding someone else's coding style
+	\item Learn why microcontrollers are a useful tool
+	\end{itemize}
+}
+
+
+
+
+
+
+
+
+
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	Summary
 \section{Summary}
@@ -280,6 +307,9 @@ Making an Arduino Memory Game}
 	\item Repeat previous steps ad infinitum until you get bored.
 	\end{itemize}
 }
+
+
+
 
 
 
